// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Zorg /> > Matches the Full Page snapshot for item Hulp bij het huishouden (geleverd) 1`] = `
<DocumentFragment>
  <main
    class="_Page_47d7c0 _DetailPage_47d7c0 _StatusDetail_3aea40"
  >
    <header
      class="_PageHeading_3b337d _hasIcon_3b337d _hasBackLink_3b337d"
    >
      <span
        aria-hidden="true"
        class="_Icon_3b337d"
      >
        <svg
          aria-label="Zorg en ondersteuning"
          class="_ChapterIcon_3ea2dd"
          fill="black"
          focusable="false"
          height="32px"
          viewBox="0 0 32 32"
          width="32px"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <title>
            zorg-en-ondersteuning-icoon
          </title>
          <polygon
            id="Path"
            points="14 25 18 25 18 21 22 21 22 17 18 17 18 13 14 13 14 17 10 17 10 21 14 21"
          />
          <path
            d="M25,6 L25,0 L7,0 L7,6 L0,6 L0,32 L32,32 L32,6 L25,6 Z M11,4 L21,4 L21,6 L11,6 L11,4 Z M28,28 L4,28 L4,10 L28,10 L28,28 Z"
            id="Shape"
          />
        </svg>
      </span>
      <div
        class="_HeadingInner_3b337d"
      >
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45 _BackLink_3b337d"
          href="/zorg-en-ondersteuning"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-links-icoon
            </title>
            <polygon
              points="22.8571429 32 6.85714286 16 22.8571429 0 25.7568858 2.91002571 12.6771943 16 25.7568858 29.0899743"
            />
          </svg>
          Zorg en ondersteuning
        </a>
        <h2
          class="amsterdam-heading amsterdam-heading--1"
        >
          Hulp bij het huishouden (geleverd)
        </h2>
      </div>
    </header>
    <div
      class="_PageContent_47d7c0 _DetailPageContent_3aea40"
    >
      <div
        class="_InfoDetail_6f1df2"
      >
        <h3
          class="amsterdam-heading amsterdam-heading--4 _Label_6f1df2"
        >
          Aanbieder
        </h3>
        <p
          class="_Value_6f1df2"
        >
          Emile Thuiszorg
        </p>
      </div>
    </div>
    <div
      class="_StatusLine_a12ff2"
    >
      <h4
        class="amsterdam-heading amsterdam-heading--4 _ListHeading_a12ff2"
      >
        Status
      </h4>
      <ul
        class="_List_a12ff2"
      >
        <li
          class="_ListItem_a12ff2"
        >
          <div
            class="_ListItemInner_a12ff2"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="_StatusConnection_a12ff2"
            >
              <span
                class="_ConnectLine_a12ff2 _ConnectLine--start-checked_a12ff2"
              />
              <span
                class="_Checkmark_a12ff2 _Checkmark--checked_a12ff2"
              />
            </div>
            <div
              class="_Panel_a12ff2 _Panel--status_a12ff2"
            >
              <strong
                class="_StatusTitle_a12ff2"
              >
                Besluit
              </strong>
              <time
                class="_StatusDate_a12ff2"
              >
                15 januari 2022
              </time>
            </div>
            <div
              class="_Panel_a12ff2 _Panel--description_a12ff2"
            >
              <div
                class="_PanelContent_a12ff2"
              >
                
              
                <p>
                  
                U hebt recht op hulp bij het huishouden (geleverd) per 15 december 2021.
              
                </p>
                
              
                <p>
                  
                
                    In de brief leest u ook hoe u bezwaar kunt maken, een klacht
                    kan indienen of 
                  <u>
                    hoe u van aanbieder kunt wisselen.
                  </u>
                  
                  
              
                </p>
                
            
              </div>
            </div>
          </div>
        </li>
        <li
          class="_ListItem_a12ff2 _ListItem--highlight_a12ff2"
        >
          <div
            class="_ListItemInner_a12ff2"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="_StatusConnection_a12ff2"
            >
              <span
                class="_ConnectLine_a12ff2 _ConnectLine--middle-checked-next_a12ff2"
              />
              <span
                class="_Checkmark_a12ff2 _Checkmark--active_a12ff2 _Checkmark--checked_a12ff2"
              />
            </div>
            <div
              class="_Panel_a12ff2 _Panel--status_a12ff2"
            >
              <strong
                class="_StatusTitle_a12ff2"
              >
                Levering gestart
              </strong>
            </div>
            <div
              class="_Panel_a12ff2 _Panel--description_a12ff2"
            >
              <div
                class="_PanelContent_a12ff2"
              >
                <p>
                  
            Emile Thuiszorg is gestart met het leveren van hulp bij het huishouden (geleverd).
          
                </p>
              </div>
            </div>
          </div>
        </li>
        <li
          class="_ListItem_a12ff2"
        >
          <div
            class="_ListItemInner_a12ff2"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="_StatusConnection_a12ff2"
            >
              <span
                class="_ConnectLine_a12ff2"
              />
              <span
                class="_Checkmark_a12ff2"
              />
            </div>
            <div
              class="_Panel_a12ff2 _Panel--status_a12ff2"
            >
              <strong
                class="_StatusTitle_a12ff2"
              >
                Levering gestopt
              </strong>
            </div>
            <div
              class="_Panel_a12ff2 _Panel--description_a12ff2"
            >
              <div
                class="_PanelContent_a12ff2"
              >
                <p>
                  
            Niet van toepassing.
          
                </p>
              </div>
            </div>
          </div>
        </li>
        <li
          class="_ListItem_a12ff2"
        >
          <div
            class="_ListItemInner_a12ff2"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="_StatusConnection_a12ff2"
            >
              <span
                class="_ConnectLine_a12ff2 _ConnectLine--end_a12ff2"
              />
              <span
                class="_Checkmark_a12ff2"
              />
            </div>
            <div
              class="_Panel_a12ff2 _Panel--status_a12ff2"
            >
              <strong
                class="_StatusTitle_a12ff2"
              >
                Einde recht
              </strong>
            </div>
            <div
              class="_Panel_a12ff2 _Panel--description_a12ff2"
            >
              <div
                class="_PanelContent_a12ff2"
              >
                <p>
                  
            Uw recht op hulp bij het huishouden (geleverd) is beëindigd per 
          
                </p>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </main>
</DocumentFragment>
`;

exports[`<Zorg /> > Matches the Full Page snapshot for item Hulp bij het huishouden (gestopt) 1`] = `
<DocumentFragment>
  <main
    class="_Page_47d7c0 _DetailPage_47d7c0 _StatusDetail_3aea40"
  >
    <header
      class="_PageHeading_3b337d _hasIcon_3b337d _hasBackLink_3b337d"
    >
      <span
        aria-hidden="true"
        class="_Icon_3b337d"
      >
        <svg
          aria-label="Zorg en ondersteuning"
          class="_ChapterIcon_3ea2dd"
          fill="black"
          focusable="false"
          height="32px"
          viewBox="0 0 32 32"
          width="32px"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <title>
            zorg-en-ondersteuning-icoon
          </title>
          <polygon
            id="Path"
            points="14 25 18 25 18 21 22 21 22 17 18 17 18 13 14 13 14 17 10 17 10 21 14 21"
          />
          <path
            d="M25,6 L25,0 L7,0 L7,6 L0,6 L0,32 L32,32 L32,6 L25,6 Z M11,4 L21,4 L21,6 L11,6 L11,4 Z M28,28 L4,28 L4,10 L28,10 L28,28 Z"
            id="Shape"
          />
        </svg>
      </span>
      <div
        class="_HeadingInner_3b337d"
      >
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45 _BackLink_3b337d"
          href="/zorg-en-ondersteuning"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-links-icoon
            </title>
            <polygon
              points="22.8571429 32 6.85714286 16 22.8571429 0 25.7568858 2.91002571 12.6771943 16 25.7568858 29.0899743"
            />
          </svg>
          Zorg en ondersteuning
        </a>
        <h2
          class="amsterdam-heading amsterdam-heading--1"
        >
          Hulp bij het huishouden (gestopt)
        </h2>
      </div>
    </header>
    <div
      class="_PageContent_47d7c0 _DetailPageContent_3aea40"
    >
      <div
        class="_InfoDetail_6f1df2"
      >
        <h3
          class="amsterdam-heading amsterdam-heading--4 _Label_6f1df2"
        >
          Aanbieder
        </h3>
        <p
          class="_Value_6f1df2"
        >
          Emile Thuiszorg
        </p>
      </div>
    </div>
    <div
      class="_StatusLine_a12ff2"
    >
      <h4
        class="amsterdam-heading amsterdam-heading--4 _ListHeading_a12ff2"
      >
        Status
      </h4>
      <ul
        class="_List_a12ff2"
      >
        <li
          class="_ListItem_a12ff2"
        >
          <div
            class="_ListItemInner_a12ff2"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="_StatusConnection_a12ff2"
            >
              <span
                class="_ConnectLine_a12ff2 _ConnectLine--start-checked_a12ff2"
              />
              <span
                class="_Checkmark_a12ff2 _Checkmark--checked_a12ff2"
              />
            </div>
            <div
              class="_Panel_a12ff2 _Panel--status_a12ff2"
            >
              <strong
                class="_StatusTitle_a12ff2"
              >
                Besluit
              </strong>
              <time
                class="_StatusDate_a12ff2"
              >
                15 januari 2022
              </time>
            </div>
            <div
              class="_Panel_a12ff2 _Panel--description_a12ff2"
            >
              <div
                class="_PanelContent_a12ff2"
              >
                
              
                <p>
                  
                U hebt recht op hulp bij het huishouden (gestopt) per 15 december 2021.
              
                </p>
                
              
                <p>
                  
                In de brief leest u ook hoe u bezwaar kunt maken of een klacht kan
              indienen.
              
                </p>
                
            
              </div>
            </div>
          </div>
        </li>
        <li
          class="_ListItem_a12ff2"
        >
          <div
            class="_ListItemInner_a12ff2"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="_StatusConnection_a12ff2"
            >
              <span
                class="_ConnectLine_a12ff2 _ConnectLine--checked_a12ff2"
              />
              <span
                class="_Checkmark_a12ff2 _Checkmark--checked_a12ff2"
              />
            </div>
            <div
              class="_Panel_a12ff2 _Panel--status_a12ff2"
            >
              <strong
                class="_StatusTitle_a12ff2"
              >
                Levering gestart
              </strong>
            </div>
            <div
              class="_Panel_a12ff2 _Panel--description_a12ff2"
            >
              <div
                class="_PanelContent_a12ff2"
              >
                <p>
                  
            Emile Thuiszorg is gestart met het leveren van hulp bij het huishouden (gestopt).
          
                </p>
              </div>
            </div>
          </div>
        </li>
        <li
          class="_ListItem_a12ff2"
        >
          <div
            class="_ListItemInner_a12ff2"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="_StatusConnection_a12ff2"
            >
              <span
                class="_ConnectLine_a12ff2 _ConnectLine--checked_a12ff2"
              />
              <span
                class="_Checkmark_a12ff2 _Checkmark--checked_a12ff2"
              />
            </div>
            <div
              class="_Panel_a12ff2 _Panel--status_a12ff2"
            >
              <strong
                class="_StatusTitle_a12ff2"
              >
                Levering gestopt
              </strong>
            </div>
            <div
              class="_Panel_a12ff2 _Panel--description_a12ff2"
            >
              <div
                class="_PanelContent_a12ff2"
              >
                <p>
                  
            Emile Thuiszorg heeft aan ons doorgegeven dat u geen hulp bij het huishouden (gestopt)
            meer krijgt.
          
                </p>
              </div>
            </div>
          </div>
        </li>
        <li
          class="_ListItem_a12ff2 _ListItem--highlight_a12ff2"
        >
          <div
            class="_ListItemInner_a12ff2"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="_StatusConnection_a12ff2"
            >
              <span
                class="_ConnectLine_a12ff2 _ConnectLine--end-active_a12ff2 _ConnectLine--end_a12ff2"
              />
              <span
                class="_Checkmark_a12ff2 _Checkmark--active_a12ff2"
              />
            </div>
            <div
              class="_Panel_a12ff2 _Panel--status_a12ff2"
            >
              <strong
                class="_StatusTitle_a12ff2"
              >
                Einde recht
              </strong>
              <time
                class="_StatusDate_a12ff2"
              >
                22 januari 2022
              </time>
            </div>
            <div
              class="_Panel_a12ff2 _Panel--description_a12ff2"
            >
              <div
                class="_PanelContent_a12ff2"
              >
                <p>
                  
            Uw recht op hulp bij het huishouden (gestopt) is beëindigd per 22 januari 2022
          
                </p>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </main>
</DocumentFragment>
`;

exports[`<Zorg /> > Matches the Full Page snapshot for item Hulp bij het huishouden (nog niet geleverd) 1`] = `
<DocumentFragment>
  <main
    class="_Page_47d7c0 _DetailPage_47d7c0 _StatusDetail_3aea40"
  >
    <header
      class="_PageHeading_3b337d _hasIcon_3b337d _hasBackLink_3b337d"
    >
      <span
        aria-hidden="true"
        class="_Icon_3b337d"
      >
        <svg
          aria-label="Zorg en ondersteuning"
          class="_ChapterIcon_3ea2dd"
          fill="black"
          focusable="false"
          height="32px"
          viewBox="0 0 32 32"
          width="32px"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <title>
            zorg-en-ondersteuning-icoon
          </title>
          <polygon
            id="Path"
            points="14 25 18 25 18 21 22 21 22 17 18 17 18 13 14 13 14 17 10 17 10 21 14 21"
          />
          <path
            d="M25,6 L25,0 L7,0 L7,6 L0,6 L0,32 L32,32 L32,6 L25,6 Z M11,4 L21,4 L21,6 L11,6 L11,4 Z M28,28 L4,28 L4,10 L28,10 L28,28 Z"
            id="Shape"
          />
        </svg>
      </span>
      <div
        class="_HeadingInner_3b337d"
      >
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45 _BackLink_3b337d"
          href="/zorg-en-ondersteuning"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-links-icoon
            </title>
            <polygon
              points="22.8571429 32 6.85714286 16 22.8571429 0 25.7568858 2.91002571 12.6771943 16 25.7568858 29.0899743"
            />
          </svg>
          Zorg en ondersteuning
        </a>
        <h2
          class="amsterdam-heading amsterdam-heading--1"
        >
          Hulp bij het huishouden (nog niet geleverd)
        </h2>
      </div>
    </header>
    <div
      class="_PageContent_47d7c0 _DetailPageContent_3aea40"
    >
      <div
        class="_InfoDetail_6f1df2"
      >
        <h3
          class="amsterdam-heading amsterdam-heading--4 _Label_6f1df2"
        >
          Aanbieder
        </h3>
        <p
          class="_Value_6f1df2"
        >
          Emile Thuiszorg
        </p>
      </div>
    </div>
    <div
      class="_StatusLine_a12ff2"
    >
      <h4
        class="amsterdam-heading amsterdam-heading--4 _ListHeading_a12ff2"
      >
        Status
      </h4>
      <ul
        class="_List_a12ff2"
      >
        <li
          class="_ListItem_a12ff2 _ListItem--highlight_a12ff2"
        >
          <div
            class="_ListItemInner_a12ff2"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="_StatusConnection_a12ff2"
            >
              <span
                class="_ConnectLine_a12ff2 _ConnectLine--start_a12ff2"
              />
              <span
                class="_Checkmark_a12ff2 _Checkmark--active_a12ff2 _Checkmark--checked_a12ff2"
              />
            </div>
            <div
              class="_Panel_a12ff2 _Panel--status_a12ff2"
            >
              <strong
                class="_StatusTitle_a12ff2"
              >
                Besluit
              </strong>
              <time
                class="_StatusDate_a12ff2"
              >
                15 januari 2022
              </time>
            </div>
            <div
              class="_Panel_a12ff2 _Panel--description_a12ff2"
            >
              <div
                class="_PanelContent_a12ff2"
              >
                
              
                <p>
                  
                U hebt recht op hulp bij het huishouden (nog niet geleverd) per 15 januari 2022.
              
                </p>
                
              
                <p>
                  
                
                    In de brief leest u ook hoe u bezwaar kunt maken, een klacht
                    kan indienen of 
                  <u>
                    hoe u van aanbieder kunt wisselen.
                  </u>
                  
                  
              
                </p>
                
            
              </div>
            </div>
          </div>
        </li>
        <li
          class="_ListItem_a12ff2"
        >
          <div
            class="_ListItemInner_a12ff2"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="_StatusConnection_a12ff2"
            >
              <span
                class="_ConnectLine_a12ff2"
              />
              <span
                class="_Checkmark_a12ff2"
              />
            </div>
            <div
              class="_Panel_a12ff2 _Panel--status_a12ff2"
            >
              <strong
                class="_StatusTitle_a12ff2"
              >
                Levering gestart
              </strong>
            </div>
            <div
              class="_Panel_a12ff2 _Panel--description_a12ff2"
            >
              <div
                class="_PanelContent_a12ff2"
              >
                <p>
                  
            Emile Thuiszorg is gestart met het leveren van hulp bij het huishouden (nog niet geleverd).
          
                </p>
              </div>
            </div>
          </div>
        </li>
        <li
          class="_ListItem_a12ff2"
        >
          <div
            class="_ListItemInner_a12ff2"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="_StatusConnection_a12ff2"
            >
              <span
                class="_ConnectLine_a12ff2"
              />
              <span
                class="_Checkmark_a12ff2"
              />
            </div>
            <div
              class="_Panel_a12ff2 _Panel--status_a12ff2"
            >
              <strong
                class="_StatusTitle_a12ff2"
              >
                Levering gestopt
              </strong>
            </div>
            <div
              class="_Panel_a12ff2 _Panel--description_a12ff2"
            >
              <div
                class="_PanelContent_a12ff2"
              >
                <p>
                  
            Niet van toepassing.
          
                </p>
              </div>
            </div>
          </div>
        </li>
        <li
          class="_ListItem_a12ff2"
        >
          <div
            class="_ListItemInner_a12ff2"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="_StatusConnection_a12ff2"
            >
              <span
                class="_ConnectLine_a12ff2 _ConnectLine--end_a12ff2"
              />
              <span
                class="_Checkmark_a12ff2"
              />
            </div>
            <div
              class="_Panel_a12ff2 _Panel--status_a12ff2"
            >
              <strong
                class="_StatusTitle_a12ff2"
              >
                Einde recht
              </strong>
            </div>
            <div
              class="_Panel_a12ff2 _Panel--description_a12ff2"
            >
              <div
                class="_PanelContent_a12ff2"
              >
                <p>
                  
            Uw recht op hulp bij het huishouden (nog niet geleverd) is beëindigd per 
          
                </p>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </main>
</DocumentFragment>
`;

exports[`<Zorg /> > Matches the Full Page snapshot for item Hulp bij het huishouden (tijdelijk gestopt) 1`] = `
<DocumentFragment>
  <main
    class="_Page_47d7c0 _DetailPage_47d7c0 _StatusDetail_3aea40"
  >
    <header
      class="_PageHeading_3b337d _hasIcon_3b337d _hasBackLink_3b337d"
    >
      <span
        aria-hidden="true"
        class="_Icon_3b337d"
      >
        <svg
          aria-label="Zorg en ondersteuning"
          class="_ChapterIcon_3ea2dd"
          fill="black"
          focusable="false"
          height="32px"
          viewBox="0 0 32 32"
          width="32px"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <title>
            zorg-en-ondersteuning-icoon
          </title>
          <polygon
            id="Path"
            points="14 25 18 25 18 21 22 21 22 17 18 17 18 13 14 13 14 17 10 17 10 21 14 21"
          />
          <path
            d="M25,6 L25,0 L7,0 L7,6 L0,6 L0,32 L32,32 L32,6 L25,6 Z M11,4 L21,4 L21,6 L11,6 L11,4 Z M28,28 L4,28 L4,10 L28,10 L28,28 Z"
            id="Shape"
          />
        </svg>
      </span>
      <div
        class="_HeadingInner_3b337d"
      >
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45 _BackLink_3b337d"
          href="/zorg-en-ondersteuning"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-links-icoon
            </title>
            <polygon
              points="22.8571429 32 6.85714286 16 22.8571429 0 25.7568858 2.91002571 12.6771943 16 25.7568858 29.0899743"
            />
          </svg>
          Zorg en ondersteuning
        </a>
        <h2
          class="amsterdam-heading amsterdam-heading--1"
        >
          Hulp bij het huishouden (tijdelijk gestopt)
        </h2>
      </div>
    </header>
    <div
      class="_PageContent_47d7c0 _DetailPageContent_3aea40"
    >
      <div
        class="_InfoDetail_6f1df2"
      >
        <h3
          class="amsterdam-heading amsterdam-heading--4 _Label_6f1df2"
        >
          Aanbieder
        </h3>
        <p
          class="_Value_6f1df2"
        >
          Emile Thuiszorg
        </p>
      </div>
    </div>
    <div
      class="_StatusLine_a12ff2"
    >
      <h4
        class="amsterdam-heading amsterdam-heading--4 _ListHeading_a12ff2"
      >
        Status
      </h4>
      <ul
        class="_List_a12ff2"
      >
        <li
          class="_ListItem_a12ff2"
        >
          <div
            class="_ListItemInner_a12ff2"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="_StatusConnection_a12ff2"
            >
              <span
                class="_ConnectLine_a12ff2 _ConnectLine--start-checked_a12ff2"
              />
              <span
                class="_Checkmark_a12ff2 _Checkmark--checked_a12ff2"
              />
            </div>
            <div
              class="_Panel_a12ff2 _Panel--status_a12ff2"
            >
              <strong
                class="_StatusTitle_a12ff2"
              >
                Besluit
              </strong>
              <time
                class="_StatusDate_a12ff2"
              >
                15 januari 2022
              </time>
            </div>
            <div
              class="_Panel_a12ff2 _Panel--description_a12ff2"
            >
              <div
                class="_PanelContent_a12ff2"
              >
                
              
                <p>
                  
                U hebt recht op hulp bij het huishouden (tijdelijk gestopt) per 15 december 2021.
              
                </p>
                
              
                <p>
                  
                
                    In de brief leest u ook hoe u bezwaar kunt maken, een klacht
                    kan indienen of 
                  <u>
                    hoe u van aanbieder kunt wisselen.
                  </u>
                  
                  
              
                </p>
                
            
              </div>
            </div>
          </div>
        </li>
        <li
          class="_ListItem_a12ff2"
        >
          <div
            class="_ListItemInner_a12ff2"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="_StatusConnection_a12ff2"
            >
              <span
                class="_ConnectLine_a12ff2 _ConnectLine--checked_a12ff2"
              />
              <span
                class="_Checkmark_a12ff2 _Checkmark--checked_a12ff2"
              />
            </div>
            <div
              class="_Panel_a12ff2 _Panel--status_a12ff2"
            >
              <strong
                class="_StatusTitle_a12ff2"
              >
                Levering gestart
              </strong>
            </div>
            <div
              class="_Panel_a12ff2 _Panel--description_a12ff2"
            >
              <div
                class="_PanelContent_a12ff2"
              >
                <p>
                  
            Emile Thuiszorg is gestart met het leveren van hulp bij het huishouden (tijdelijk gestopt).
          
                </p>
              </div>
            </div>
          </div>
        </li>
        <li
          class="_ListItem_a12ff2 _ListItem--highlight_a12ff2"
        >
          <div
            class="_ListItemInner_a12ff2"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="_StatusConnection_a12ff2"
            >
              <span
                class="_ConnectLine_a12ff2 _ConnectLine--middle-checked-next_a12ff2"
              />
              <span
                class="_Checkmark_a12ff2 _Checkmark--active_a12ff2 _Checkmark--checked_a12ff2"
              />
            </div>
            <div
              class="_Panel_a12ff2 _Panel--status_a12ff2"
            >
              <strong
                class="_StatusTitle_a12ff2"
              >
                Levering gestopt
              </strong>
            </div>
            <div
              class="_Panel_a12ff2 _Panel--description_a12ff2"
            >
              <div
                class="_PanelContent_a12ff2"
              >
                <p>
                  
            Niet van toepassing.
          
                </p>
              </div>
            </div>
          </div>
        </li>
        <li
          class="_ListItem_a12ff2"
        >
          <div
            class="_ListItemInner_a12ff2"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="_StatusConnection_a12ff2"
            >
              <span
                class="_ConnectLine_a12ff2 _ConnectLine--end_a12ff2"
              />
              <span
                class="_Checkmark_a12ff2"
              />
            </div>
            <div
              class="_Panel_a12ff2 _Panel--status_a12ff2"
            >
              <strong
                class="_StatusTitle_a12ff2"
              >
                Einde recht
              </strong>
            </div>
            <div
              class="_Panel_a12ff2 _Panel--description_a12ff2"
            >
              <div
                class="_PanelContent_a12ff2"
              >
                <p>
                  
            Uw recht op hulp bij het huishouden (tijdelijk gestopt) is beëindigd per 
          
                </p>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </main>
</DocumentFragment>
`;

exports[`<Zorg /> > Matches the Full Page snapshot for item Wmo item 1 1`] = `
<DocumentFragment>
  <main
    class="_Page_47d7c0 _DetailPage_47d7c0 _StatusDetail_3aea40"
  >
    <header
      class="_PageHeading_3b337d _hasIcon_3b337d _hasBackLink_3b337d"
    >
      <span
        aria-hidden="true"
        class="_Icon_3b337d"
      >
        <svg
          aria-label="Zorg en ondersteuning"
          class="_ChapterIcon_3ea2dd"
          fill="black"
          focusable="false"
          height="32px"
          viewBox="0 0 32 32"
          width="32px"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <title>
            zorg-en-ondersteuning-icoon
          </title>
          <polygon
            id="Path"
            points="14 25 18 25 18 21 22 21 22 17 18 17 18 13 14 13 14 17 10 17 10 21 14 21"
          />
          <path
            d="M25,6 L25,0 L7,0 L7,6 L0,6 L0,32 L32,32 L32,6 L25,6 Z M11,4 L21,4 L21,6 L11,6 L11,4 Z M28,28 L4,28 L4,10 L28,10 L28,28 Z"
            id="Shape"
          />
        </svg>
      </span>
      <div
        class="_HeadingInner_3b337d"
      >
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45 _BackLink_3b337d"
          href="/zorg-en-ondersteuning"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-links-icoon
            </title>
            <polygon
              points="22.8571429 32 6.85714286 16 22.8571429 0 25.7568858 2.91002571 12.6771943 16 25.7568858 29.0899743"
            />
          </svg>
          Zorg en ondersteuning
        </a>
        <h2
          class="amsterdam-heading amsterdam-heading--1"
        >
          Wmo item 1
        </h2>
      </div>
    </header>
    <div
      class="_PageContent_47d7c0 _DetailPageContent_3aea40"
    >
      <div
        class="_InfoDetail_6f1df2"
      >
        <h3
          class="amsterdam-heading amsterdam-heading--4 _Label_6f1df2"
        >
          Aanbieder
        </h3>
        <p
          class="_Value_6f1df2"
        >
          Mantelzorg B.V
        </p>
      </div>
    </div>
    <div
      class="_StatusLine_a12ff2"
    >
      <h4
        class="amsterdam-heading amsterdam-heading--4 _ListHeading_a12ff2"
      >
        Status
      </h4>
      <ul
        class="_List_a12ff2"
      >
        <li
          class="_ListItem_a12ff2 _ListItem--highlight_a12ff2"
        >
          <div
            class="_ListItemInner_a12ff2"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="_StatusConnection_a12ff2"
            >
              <span
                class="_ConnectLine_a12ff2 _ConnectLine--start_a12ff2"
              />
              <span
                class="_Checkmark_a12ff2 _Checkmark--active_a12ff2 _Checkmark--checked_a12ff2"
              />
            </div>
            <div
              class="_Panel_a12ff2 _Panel--status_a12ff2"
            >
              <strong
                class="_StatusTitle_a12ff2"
              >
                Levering gestart
              </strong>
              <time
                class="_StatusDate_a12ff2"
              >
                24 juli 2020
              </time>
            </div>
            <div
              class="_Panel_a12ff2 _Panel--description_a12ff2"
            >
              <div
                class="_PanelContent_a12ff2"
              >
                De levering van uw thuizorg is gestart
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </main>
</DocumentFragment>
`;
